--- a/memo/20191017.md
+++ b/memo/20191017.md
@@ -841,3 +841,140 @@ _header.html
 {% endif %}
 ```
 
+
+
+01_DJANGO_RECAP에서
+
+settings.py에
+
+TEMPLATES에 
+
+최상단에 templates 폴더 만들고 그 안에 base.html 
+
+home의 base.html을 복붙
+
+home의 index.html
+
+```html
+{% extends 'base.html' %}
+
+{% block title %}
+    INDEX
+{% endblock %}
+
+{% block body %}
+    <h1>This is index</h1>
+    
+{% endblock %}
+```
+
+
+
+settings.py - 주석 추가
+
+```python
+TEMPLATES = [
+    {
+        'BACKEND': 'django.template.backends.django.DjangoTemplates',
+        # 프로젝트 전체에서 공통으로 쓸 HTML을 어디에 두고, 어떻게 찾을 것인가.
+        # django는 템플릿(html)을 찾을 때 기본적으로 INSTALLED_APPS 안의 templates/ 폴더에서 찾는다.
+        # 아래 코드는 추가적으로 찾고싶은 위치를 우리가 지정하는 것이다.
+        # BASE_DIR 은 프로젝트 폴더를 의미하므로, 최종적으로 01_DJANGO_RECAP/django_recap/templates 폴더도 찾아달라는 의미
+        'DIRS': [os.path.join(BASE_DIR, 'django_recap', 'templates')], 
+        'APP_DIRS': True,
+        'OPTIONS': {
+            'context_processors': [
+                'django.template.context_processors.debug',
+                'django.template.context_processors.request',
+                'django.contrib.auth.context_processors.auth',
+                'django.contrib.messages.context_processors.messages',
+            ],
+        },
+    },
+]
+```
+
+```python
+# Build paths inside the project like this: os.path.join(BASE_DIR, ...)
+# BASE_DIR == 프로젝트 폴더
+BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
+```
+
+
+
+models.py
+
+```python
+from django.db import models
+from django.urls import reverse
+
+
+class Article(models.Model):
+    title = models.CharField(max_length=100, null=False)
+    content = models.TextField()
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    # 인스턴스 메서드. 디테일 페이지가 있을 경우 유용
+    def get_absolute_url(self):  # detail page 가 있을 때 쓰는거임
+        return reverse("board:article_detail", kwargs={"article_id": self.id})
+
+# Article은 변수라서 Article 클래스와 Comment 클래스 자리 못 바꿈
+class Comment(models.Model):
+    content = models.CharField(max_length=200)  # max_length는 잘라버림. 200 넘어가면 절삭
+    # article_id는 외부에 어떤 것을 가져오는 거라서 ForeignKey
+    # Article을 참조하겠다
+    # CASCADE 원주인이 날라가면 (댓글들) 다 지우겠다
+    # on_delete=models.CASCADE 꼭 써야함
+    article = models.ForeignKey(Article, on_delete=models.CASCADE)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+```
+
+
+
+`python manage.py migrate board zero`
+
+`rm board/migrations/0*`
+
+`python manage.py makemigrations && python manage.py migrate`
+
+
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <div>
+        <small>created: {{ article.created_at }}</small>
+        <small>updated: {{article.updated_at }}</small>
+    </div>
+    <p>
+        {{ article.content }}
+    </p>
+    <div>
+        <a href="{% url 'board:edit_article' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+            <button>수정</button>
+        </a>    
+    </div>
+    <div>
+        <form action="{% url 'board:delete_article' article.id %}" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
+            <input type="submit" value="삭제">
+        </form>
+    </div>
+
+    {% comment %} 가로선 {% endcomment %}
+    <hr> 
+
+    {% include 'board/_comment.html' %}
+{% endblock body %}
+```
+
+settings.py에 TIME_ZONE을 'Asia/Seoul'로
+
