--- a/memo/20191021.md
+++ b/memo/20191021.md
@@ -753,7 +753,7 @@ $ rm <APP_NAME>/migrations/0*
 
 class Posting(models.Model):
     user = models.ForeignKey(settings.AUTH_USER_MODEL, on_delete=models.CASCADE)
-    likes_users = models.ManyToManyField(
+    like_users = models.ManyToManyField(
         settings.AUTH_USER_MODEL, 
         related_name='like_postings', 
         blank=True
@@ -852,4 +852,659 @@ p.likes_users.add(u1)
 u2.like_postings.add(p)
 
 u2.like_postings.remove(p)
+
+User
+
+for i in range(10):
+
+u = User()
+
+u.username = f'dummyUser-no.{i}'
+
+u.set_password('rewq4321')
+
+u.save()
+
+
+
+sns - urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'sns'
+
+urlpatterns = [
+    path('', views.posting_list, name='posting_list'),
+    path('<int:posting_id>/', views.posting_detail, name='posting_detail'),
+    path('create/', views.create_posting, name='create_posting'),
+    path('<int:posting_id>/delete/', views.delete_posting, name='delete_posting'),
+    path('<int:posting_id>/comments/create/', views.create_comment, name='create_comment'),
+    path('<int:posting_id>/like/', views.like, name='like'),
+    path('<int:posting_id>/dislike/', views.dislike, name='dislike'),
+]
+```
+
+
+
+sns - views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+from django.contrib.auth.decorators import login_required
+
+from .models import Posting, Comment
+from .forms import PostingModelForm, CommentModelForm
+
+
+# @login_required(login_url='/users/login/')  # login 이 X 면 => 무조건 /accounts/login/
+# @login_required
+@require_GET
+def posting_list(request):
+    # nickname = request.COOKIES.get('nickname')
+    postings = Posting.objects.all()
+    return render(request, 'sns/posting_list.html', {
+        'postings': postings,
+        # 'nickname': nickname,
+    })
+
+@login_required
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comments = posting.comments.all()  # posting.comment_set 이 아닌 이유는 Model => related_name
+    return render(request, 'sns/posting_detail.html', {
+        'posting': posting,
+        'comments': comments,
+    })
+
+'''
+@require_POST
+def create_posting(request):
+    posting = Posting()
+    posting.content = request.POST.get('content')
+    posting.icon = ''
+    posting.image = request.FILES.get('image')
+    posting.save()
+    
+    return redirect(posting)  # redirect('sns:posting_detail', posting.id)
+'''
+
+@login_required
+@require_POST
+def create_posting(request):
+    form = PostingModelForm(request.POST, request.FILES)  # 검증 & 저장 준비
+    if form.is_valid():  # 검증!
+        posting = form.save(commit=False)  # 저장 => Posting 객체 return  /  posting은 변수
+        posting.user = request.user  # anonymous
+        posting.save()
+        return redirect(posting)  # 성공하면 detail page
+    else:
+        return redirect('sns:posting_list')  # 실패하면 list page
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.user == posting.user:
+        posting.delete()
+    return redirect('sns:posting_list')
+
+@login_required
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    form = CommentModelForm(request.POST)  # content 만 값을 확인
+    if form.is_valid():  # content 만 값을 검증
+        comment = form.save(commit=False)  # 아직 posting_id 가 비어있기 때문에, 저장하는 '척' 만 하고 Comment 객체 return
+        # comment.posting_id = posting.id
+        comment.posting = posting  # 위 코드와 같음
+        comment.user = request.user
+        comment.save()
+    return redirect(posting)
+
+
+# 기본적으로 이렇게 되어있음. 안써도 됨
+class User():
+    def __str__(self):
+        return self.username
+
+@login_required
+@require_POST
+def like(request, posting_id):
+    user = request.user
+    posting = get_object_or_404(Posting, id=posting_id)
+    # user.like_postings.add(posting)
+    posting.like_users.add(user)  # Create
+    return redirect(posting)
+
+@login_required
+@require_POST
+def dislike(request, posting_id):
+    user = request.user
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.like_users.remove(user)  # Delete
+    return redirect(posting)
+```
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block detail %}active{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+      <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+      {% else %}
+      <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <div class="row">
+          <div class="col-1">
+            <i class="{{ posting.icon }} fa-2x"></i>
+          </div>
+          <div class="col-2">
+            <form action="{% url 'sns:like' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>Like</button>
+            </form>
+          </div>
+        </div>
+        {% comment %} <i class="{{ posting.icon }} fa-3x"></i> {% endcomment %}
+        <hr>
+        <div class="row">
+          <div class="col-11">
+            {% comment %} 아래 posting.user라고 써도 됨 {% endcomment %}
+            <p class="card-text">{{ posting.user.username }}</p>
+            <p class="card-text">{{ posting.content }}</p>
+          </div>
+          <div class="col-1">
+            {% if user == posting.user %}
+            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+            {% endif %}
+          </div>
+        </div>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
+    </div>
+  </div>
+
+  {% include 'sns/_comment.html' %}
+
+</div>
+{% endblock %}
+```
+
+
+
+sns - views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+from django.contrib.auth.decorators import login_required
+
+from .models import Posting, Comment
+from .forms import PostingModelForm, CommentModelForm
+
+
+# @login_required(login_url='/users/login/')  # login 이 X 면 => 무조건 /accounts/login/
+# @login_required
+@require_GET
+def posting_list(request):
+    # nickname = request.COOKIES.get('nickname')
+    postings = Posting.objects.all()
+    return render(request, 'sns/posting_list.html', {
+        'postings': postings,
+        # 'nickname': nickname,
+    })
+
+@login_required
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comments = posting.comments.all()  # posting.comment_set 이 아닌 이유는 Model => related_name
+    return render(request, 'sns/posting_detail.html', {
+        'posting': posting,
+        'comments': comments,
+    })
+
+'''
+@require_POST
+def create_posting(request):
+    posting = Posting()
+    posting.content = request.POST.get('content')
+    posting.icon = ''
+    posting.image = request.FILES.get('image')
+    posting.save()
+    
+    return redirect(posting)  # redirect('sns:posting_detail', posting.id)
+'''
+
+@login_required
+@require_POST
+def create_posting(request):
+    form = PostingModelForm(request.POST, request.FILES)  # 검증 & 저장 준비
+    if form.is_valid():  # 검증!
+        posting = form.save(commit=False)  # 저장 => Posting 객체 return  /  posting은 변수
+        posting.user = request.user  # anonymous
+        posting.save()
+        return redirect(posting)  # 성공하면 detail page
+    else:
+        return redirect('sns:posting_list')  # 실패하면 list page
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.user == posting.user:
+        posting.delete()
+    return redirect('sns:posting_list')
+
+@login_required
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    form = CommentModelForm(request.POST)  # content 만 값을 확인
+    if form.is_valid():  # content 만 값을 검증
+        comment = form.save(commit=False)  # 아직 posting_id 가 비어있기 때문에, 저장하는 '척' 만 하고 Comment 객체 return
+        # comment.posting_id = posting.id
+        comment.posting = posting  # 위 코드와 같음
+        comment.user = request.user
+        comment.save()
+    return redirect(posting)
+
+
+# 기본적으로 이렇게 되어있음. 안써도 됨
+class User():
+    def __str__(self):
+        return self.username
+
+@login_required
+@require_POST
+def toggle_like(request, posting_id):
+    user = request.user
+    posting = get_object_or_404(Posting, id=posting_id)
+    if user in posting.like_users.all():
+        posting.like_users.remove(user)  # Delete
+    else:
+        posting.like_users.add(user)  # Create
+    # user.like_postings.add(posting)
+    # posting.like_users.add(user)  # Create
+    return redirect(posting)
+
+@login_required
+@require_POST
+def dislike(request, posting_id):
+    user = request.user
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.like_users.remove(user)  # Delete
+    return redirect(posting)
+```
+
+sns - urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'sns'
+
+urlpatterns = [
+    path('', views.posting_list, name='posting_list'),
+    path('<int:posting_id>/', views.posting_detail, name='posting_detail'),
+    path('create/', views.create_posting, name='create_posting'),
+    path('<int:posting_id>/delete/', views.delete_posting, name='delete_posting'),
+    path('<int:posting_id>/comments/create/', views.create_comment, name='create_comment'),
+    path('<int:posting_id>/like/', views.toggle_like, name='like'),
+    # path('<int:posting_id>/dislike/', views.dislike, name='dislike'),
+]
+```
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block detail %}active{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+      <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+      {% else %}
+      <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <div class="row">
+          <div class="col-1">
+            <i class="{{ posting.icon }} fa-2x"></i>
+          </div>
+          <div class="col-2">
+            <small>{{ posting.like_users.count }} 명이 좋아합니다.</small>
+          </div>
+          <div class="col-2">
+            <form action="{% url 'sns:like' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                {% if user in posting.like_usrs.all %}
+                Dislike
+                {% else %}
+                Like
+                {% endif %}
+              </button>
+            </form>
+          </div>
+        </div>
+        {% comment %} <i class="{{ posting.icon }} fa-3x"></i> {% endcomment %}
+        <hr>
+        <div class="row">
+          <div class="col-11">
+            {% comment %} 아래 posting.user라고 써도 됨 {% endcomment %}
+            <p class="card-text">{{ posting.user.username }}</p>
+            <p class="card-text">{{ posting.content }}</p>
+          </div>
+          <div class="col-1">
+            {% if user == posting.user %}
+            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+            {% endif %}
+          </div>
+        </div>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
+    </div>
+  </div>
+
+  {% include 'sns/_comment.html' %}
+
+</div>
+{% endblock %}
+```
+
+sns - views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+from django.contrib.auth.decorators import login_required
+
+from .models import Posting, Comment
+from .forms import PostingModelForm, CommentModelForm
+
+
+# @login_required(login_url='/users/login/')  # login 이 X 면 => 무조건 /accounts/login/
+# @login_required
+@require_GET
+def posting_list(request):
+    # nickname = request.COOKIES.get('nickname')
+    postings = Posting.objects.all()
+    return render(request, 'sns/posting_list.html', {
+        'postings': postings,
+        # 'nickname': nickname,
+    })
+
+@login_required
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comments = posting.comments.all()  # posting.comment_set 이 아닌 이유는 Model => related_name
+    is_like = True if posting.like_users.get(id=request.user.id).exists() else False
+    return render(request, 'sns/posting_detail.html', {
+        'posting': posting,
+        'comments': comments,
+        'is_like': is_like,
+    })
+
+'''
+@require_POST
+def create_posting(request):
+    posting = Posting()
+    posting.content = request.POST.get('content')
+    posting.icon = ''
+    posting.image = request.FILES.get('image')
+    posting.save()
+    
+    return redirect(posting)  # redirect('sns:posting_detail', posting.id)
+'''
+
+@login_required
+@require_POST
+def create_posting(request):
+    form = PostingModelForm(request.POST, request.FILES)  # 검증 & 저장 준비
+    if form.is_valid():  # 검증!
+        posting = form.save(commit=False)  # 저장 => Posting 객체 return  /  posting은 변수
+        posting.user = request.user  # anonymous
+        posting.save()
+        return redirect(posting)  # 성공하면 detail page
+    else:
+        return redirect('sns:posting_list')  # 실패하면 list page
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.user == posting.user:
+        posting.delete()
+    return redirect('sns:posting_list')
+
+@login_required
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    form = CommentModelForm(request.POST)  # content 만 값을 확인
+    if form.is_valid():  # content 만 값을 검증
+        comment = form.save(commit=False)  # 아직 posting_id 가 비어있기 때문에, 저장하는 '척' 만 하고 Comment 객체 return
+        # comment.posting_id = posting.id
+        comment.posting = posting  # 위 코드와 같음
+        comment.user = request.user
+        comment.save()
+    return redirect(posting)
+
+
+# 기본적으로 이렇게 되어있음. 안써도 됨
+class User():
+    def __str__(self):
+        return self.username
+
+@login_required
+@require_POST
+def toggle_like(request, posting_id):
+    user = request.user
+    posting = get_object_or_404(Posting, id=posting_id)
+    # if user in posting.like_users.all():
+    if posting.like_users.get(id=user.id).exists():
+        posting.like_users.remove(user)  # Delete
+        is_like = False
+    else:
+        posting.like_users.add(user)  # Create
+        is_like = True
+    # user.like_postings.add(posting)
+    # posting.like_users.add(user)  # Create
+    return redirect(posting)
+
+@login_required
+@require_POST
+def dislike(request, posting_id):
+    user = request.user
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.like_users.remove(user)  # Delete
+    return redirect(posting)
+```
+
+posting_detail.html
+
+```html
+{% extends 'sns/base.html' %}
+
+{% block title %}{% endblock %}
+
+{% block detail %}active{% endblock %}
+
+{% block body %}
+<div class="row mt-3">
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+      <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+      {% else %}
+      <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <div class="row">
+          <div class="col-1">
+            <i class="{{ posting.icon }} fa-2x"></i>
+          </div>
+          <div class="col-2">
+            <small>{{ posting.like_users.count }} 명이 좋아합니다.</small>
+          </div>
+          <div class="col-2">
+            <form action="{% url 'sns:like' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                {% if is_like %}
+                Dislike
+                {% else %}
+                Like
+                {% endif %}
+              </button>
+            </form>
+          </div>
+        </div>
+        {% comment %} <i class="{{ posting.icon }} fa-3x"></i> {% endcomment %}
+        <hr>
+        <div class="row">
+          <div class="col-11">
+            {% comment %} 아래 posting.user라고 써도 됨 {% endcomment %}
+            <p class="card-text">{{ posting.user.username }}</p>
+            <p class="card-text">{{ posting.content }}</p>
+          </div>
+          <div class="col-1">
+            {% if user == posting.user %}
+            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+            {% endif %}
+          </div>
+        </div>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
+    </div>
+  </div>
+
+  {% include 'sns/_comment.html' %}
+
+</div>
+{% endblock %}
+```
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_GET, require_POST, require_http_methods
+from django.contrib.auth.decorators import login_required
+
+from .models import Posting, Comment
+from .forms import PostingModelForm, CommentModelForm
+
+
+@require_GET
+def posting_list(request):
+    postings = Posting.objects.all()
+    return render(request, 'sns/posting_list.html', {
+        'postings': postings,
+    })
+
+
+@login_required  # login 이 X 면 => 무조건 /accounts/login/
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comments = posting.comments.all()  # posting.comment_set 이 아닌 이유는 Model => related_name
+    if posting.like_users.filter(id=request.user.id).exists():
+        is_like = True
+    else:
+        is_like= False
+    return render(request, 'sns/posting_detail.html', {
+        'posting': posting,
+        'comments': comments,
+        'is_like': is_like,
+    })
+
+
+@login_required  # login 이 X 면 => 무조건 /accounts/login/
+@require_POST
+def create_posting(request):
+    form = PostingModelForm(request.POST, request.FILES)  # 검증 & 저장 준비
+    if form.is_valid():  # 검증!
+        posting = form.save(commit=False)  # 저장 => Posting 객체 return
+        posting.user = request.user  # anonymous
+        posting.save()
+        return redirect(posting)  # 성공하면 detail page
+    else:
+        return redirect('sns:posting_list')  # 실패하면 list page
+
+
+@login_required  # login 이 X 면 => 무조건 /accounts/login/
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.user == posting.user:
+        posting.delete()
+    return redirect('sns:posting_list')
+
+
+@login_required  # login 이 X 면 => 무조건 /accounts/login/
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    form = CommentModelForm(request.POST)  # content 만 값을 확인 
+    if form.is_valid():  # content 만 값을 검증
+        comment = form.save(commit=False)  # 아직 posting_id 가 비어있기 때문에, 저장하는 '척' 만 하고 Comment 객체 return
+        comment.posting = posting  # comment.posting_id = posting.id
+        comment.user = request.user
+        comment.save()
+    return redirect(posting)
+
+
+@login_required
+@require_POST
+def toggle_like(request, posting_id):
+    user = request.user
+    posting = get_object_or_404(Posting, id=posting_id)
+    # if user in posting.like_users.all():
+    if posting.like_users.filter(id=user.id).exists():
+        posting.like_users.remove(user) # Delete
+    else:
+        posting.like_users.add(user)  # Create
+    return redirect(posting)
+
+```
 
