--- a/memo/20191022.md
+++ b/memo/20191022.md
@@ -431,7 +431,1104 @@ Tab 띄어쓰기 용량=돈 듦
 
 그래서 한줄로(min) 해놓음(6번째 줄) - 용량 차이 많이 남
 
+settings.py
+
+```python
+STATIC_URL = '/static/'
+STATICFILES_DIRS = [
+    # BASE_DIR/APP/static/ 자동으로 검색.
+    os.path.join(BASE_DIR, 'assets'),  # 여기(BASE_DIR/assets/)도 찾아봐 주렴..
+]
+```
 
 
 
+
+
+student@M703 MINGW64 ~/TIL/06_django_advance/04_INSTAGRAM에서
+
+`mkdir templates`
+
+`touch templates/base.html`
+
+
+
+settings.py -  DIRS 수정
+
+```python
+TEMPLATES = [
+    {
+        'BACKEND': 'django.template.backends.django.DjangoTemplates',
+        'DIRS': [
+            # BASE_DIR/APP/templates/ 자동으로 검색
+            os.path.join(BASE_DIR, 'templates')  # 여기(BASE_DIR/templates)도 찾아봐 주렴..
+        ],
+        'APP_DIRS': True,
+        'OPTIONS': {
+            'context_processors': [
+                'django.template.context_processors.debug',
+                'django.template.context_processors.request',
+                'django.contrib.auth.context_processors.auth',
+                'django.contrib.messages.context_processors.messages',
+            ],
+        },
+    },
+]
+
+```
+
+base.html
+
+```html
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>Document</title>
+</head>
+<body>
+    {% block body %}
+    {% endblock %}
+</body>html>
+```
+
+
+
+signup.html
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<form method="POST">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
+{% endblock %}
+```
+
+
+
+base.html
+
+```html
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="container">
+        {% block body %}
+        {% endblock %}
+    </div>
+</body>
+
+</html>
+```
+
+
+
+`find . -name '*.css'`
+
+`find . -name '*.pyc' -delete`
+
+`python manage.py runserver`
+
+
+
+Ctrl + Shift + r => 캐싱 무시하고 새로고침
+
+
+
+ http://127.0.0.1:8000/accounts/signup/ 
+
+회원가입하고나서
+
+f12 - Application - sessionid 추가되어있으면 로그인 된 것임(클럽 도장)
+
+
+
+signup.html 복사해서
+
+login.html에 붙여넣기
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<form method="POST">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
+{% endblock %}
+```
+
+ http://127.0.0.1:8000/accounts/logout/ 하면 로그아웃됨(sessionid 없어짐)
+
+
+
+settings.py에
+
+STATIC_URL = '/thisisnonsense'  # urls.py > path('/thisisnonsense/')
+
+html에 표현될 때 /~~~~~~/css/
+
+무엇을 쓰든 상관 없음. 접두사
+
+```python
+STATIC_URL = '/static/'  # html 에서 {% static 'MY/FILE %} => 이게 HTML 의 접두사.
+```
+
+instagram - urls.py에 
+
+path('static/', include('static.urls'))  # static 앱을 만들면 settings.py에 static과 중복이니까 바꿔야하겠지만 
+
+ https://fontawesome.com/   로그인해서
+
+base.html
+
+```html
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>Fake Insta</title>
+    <script src="https://kit.fontawesome.com/557ed3dfa5.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    {% include '_navbar.html' %}
+    <div class="container">
+        {% block body %}
+        {% endblock %}
+    </div>
+</body>
+
+</html>
+```
+
+
+
+최상단 templates에 _navbar.html 만들기
+
+```html
+<nav class="mb-3 navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
+    <a class="navbar-brand" href="#">
+        <i class="fab fa-instagram"></i> | Instagram
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">New</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">MyPage</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+```
+
+ http://127.0.0.1:8000/accounts/login/ 
+
+_navbar.html
+
+```html
+<nav class="mb-3 navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
+    <a class="navbar-brand" href="#">
+        <i class="fab fa-instagram"></i> | Instagram
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="#">New</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">MyPage</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:logout' %}" class="nav-link">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a href="{% url 'accounts:signup' %}" class="nav-link">Signup</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:login' %}" class="nav-link">Login</a>
+            </li>
+            {% endif %}
+
+        </ul>
+    </div>
+</nav>
+```
+
+`pip install pillow pilkit django-imagekit`
+
+postings - models.py
+
+```python
+from django.db import models
+from django.urls import reverse
+from django_extensions.db.models import TimeStampedModel
+from django.contrib.auth import get_user_model
+
+from imagekit.models import ProcessedImageField
+from imagekit.processors import ResizeToFill
+
+User = get_user_model()
+
+class HashTag(TimeStampedModel):
+    content = models.CharField(max_length=20, unique=True)
+
+# Create your models here.
+class Posting(TimeStampedModel):
+    like_users = models.ManyToManyField(User, related_name='like_posts', blank=True)
+    author = models.ForeignKey(User, on_delete=models.CASCADE, related_name='postings')
+    hashtags = models.ManyToManyField(HashTag, blank=True, related_name='postings')
+
+    content = models.CharField(max_length=140)
+
+    class Meta:
+        ordering = ('-created',)
+
+    def get_absolute_url(self):
+        return reverse("postings:posting_detail", kwargs={"posting_id": self.pk})
+    
+
+class Image(models.Model):
+    posting = models.ForeignKey(Posting, on_delete=models.CASCADE, related_name='images')
+    file = ProcessedImageField(
+        processors=[ResizeToFill(600, 600)],
+        upload_to='postings/images',
+        format='JPEG',  # 'JPEG'=='JPG'
+        options={'quality': 90},
+    )
+
+
+class Comment(TimeStampedModel):
+    author = models.ForeignKey(User, on_delete=models.CASCADE, related_name='comments')
+    posting = models.ForeignKey(Posting, on_delete=models.CASCADE, related_name='comments')
+    content = models.CharField(max_length=140)
+
+# p = Posting.objects.last()
+
+# p.image_set.all()  # related_name 이 default
+# p.images.all()  # related_name='images'
+```
+
+`python manage.py makemigrations`
+
+`python manage.py migrate`
+
+postings - forms.py 만들고
+
+```python
+from django import forms
+from .models import Posting, Comment
+
+class PostingForm(forms.ModelForm):
+    class Meta:
+        models = Posting
+        fields = ('content', )
+
+
+class CommentForm(forms.ModelForm):
+    class Meta:
+        model = Comment
+        fields = ('content', )
+```
+
+
+
+MTV (Model Template View)
+
+
+
+postings - models.py 에서 Comment 좋아요 해시태그 주석처리함
+
+ Posting과 Image만 생각
+
+`python manage.py makemigrations && python manage.py migrate`
+
+
+
+postings - forms.py 에서
+
+class CommentForm 주석처리함
+
+```python
+from django import forms
+from .models import Posting, Comment
+
+class PostingForm(forms.ModelForm):
+    class Meta:
+        model = Posting
+        fields = ('content', )
+
+
+# class CommentForm(forms.ModelForm):
+#     class Meta:
+#         model = Comment
+#         fields = ('content', )
+```
+
+
+
+
+
+
+
+instagram - urls.py
+
+```python
+from django.contrib import admin
+from django.urls import path, include
+
+from django.conf.urls.static import static
+from django.conf import settings
+
+urlpatterns = [
+    path('admin/', admin.site.urls),
+    path('accounts/', include('accounts.urls')),
+    path('insta/', include('postings.urls')),
+]
+
+urlpatterns += static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)
+```
+
+
+
+postings - views.py
+
+```python
+from django.shortcuts import render, redirect
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    return render(request, )
+
+@require_GET
+def posting_list(request):
+    return render(request, )
+
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    pass
+
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    pass
+
+@require_POST
+def delete_posting(request, posting_id):
+    pass
+```
+
+
+
+postings - urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'postings'
+
+# insta/
+urlpatterns = [
+    path('', views.posting_list, name='posting_list'),
+    path('<int:posting_id>/', views.posting_detail, name='posting_detail'),
+    path('create/', views.create_posting, name='create_posting'),
+    path('<int:posting_id>/update/', views.update_posting, name='update_posting'),
+    path('<int:posting_id>/delete/', views.delete_posting, name='delete_posting'),
+]
+```
+
+
+
+postings - views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+    })
+
+@require_GET
+def posting_list(request):
+    postings = Posting.object.all()
+    return render(request, 'postings/posting_list.html', {
+        'postings': postings,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    if request.method == 'POST':
+        form = PostingForm(request.POST)
+        if form.is_valid():
+            posting = form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            return redirect(posting)
+    else:
+        form = PostingForm()
+    return render(request, 'postings/form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.method == 'POST':
+        form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+    else:
+        form = PostingForm(instance=posting)
+    return render(request, 'postings/form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('postings:posting_list')
+```
+
+`cd postings/`
+
+`mkdir -p templates/postings`
+
+`cd templates/postings/`
+
+`touch posting_detail.html posting_list.html posting_form.html`
+
+
+
+
+
+
+
+postings - templates - postings에 _posting.html
+
+posting_form.html에
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<form method="POST">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
+{% endblock body %}
+```
+
+
+
+
+
+`cd -`
+
+`cd ..`
+
+`python manage.py runserver`
+
+
+
+postings - forms.py
+
+```python
+from django import forms
+from .models import Posting, Image  #, Comment
+
+class PostingForm(forms.ModelForm):
+    class Meta:
+        model = Posting
+        fields = ('content', )
+
+class ImageForm(forms.ModelForm):
+    class Meta:
+        model = Image
+        fields = ('file', )
+        widgets = {
+            'file': forms.FileInput(attrs={'multiple': True})
+        }
+
+# class CommentForm(forms.ModelForm):
+#     class Meta:
+#         model = Comment
+#         fields = ('content', )
+```
+
+
+
+posting - views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm, ImageForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+    })
+
+@require_GET
+def posting_list(request):
+    postings = Posting.object.all()
+    return render(request, 'postings/posting_list.html', {
+        'postings': postings,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    if request.method == 'POST':
+        posting_form = PostingForm(request.POST)
+
+        if posting_form.is_valid():
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            return redirect(posting)
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.method == 'POST':
+        form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+    else:
+        form = PostingForm(instance=posting)
+    return render(request, 'postings/posting_form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('postings:posting_list')
+```
+
+postings - templates - postings - posting_form.html
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<form method="POST">
+    {% csrf_token %}
+    {% bootstrap_form posting_form %}
+    {% bootstrap_form image_form %}
+    {% buttons %}
+    <button class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
+{% endblock body %}
+```
+
+
+
+posting_form.html
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% bootstrap_form posting_form %}
+    {% bootstrap_form image_form show_label=False %}
+    {% buttons %}
+    <button class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
+{% endblock body %}
+```
+
+
+
+views.py - create_posting에 x 넣어서 데이터 확인
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm, ImageForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+    })
+
+@require_GET
+def posting_list(request):
+    postings = Posting.object.all()
+    return render(request, 'postings/posting_list.html', {
+        'postings': postings,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    if request.method == 'POST':
+        x
+        posting_form = PostingForm(request.POST)
+
+        if posting_form.is_valid():
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            return redirect(posting)
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.method == 'POST':
+        form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+    else:
+        form = PostingForm(instance=posting)
+    return render(request, 'postings/posting_form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('postings:posting_list')
+```
+
+
+
+
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm, ImageForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+    })
+
+@require_GET
+def posting_list(request):
+    postings = Posting.object.all()
+    return render(request, 'postings/posting_list.html', {
+        'postings': postings,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    if request.method == 'POST':
+        from IPython import embed;embed()
+        for image in request.FILES.getlist('file'):
+            pass
+        posting_form = PostingForm(request.POST)
+
+        if posting_form.is_valid():
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            return redirect(posting)
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.method == 'POST':
+        form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+    else:
+        form = PostingForm(instance=posting)
+    return render(request, 'postings/posting_form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('postings:posting_list')
+```
+
+파일 여러개 submit
+
+request.FILES.getlist('file')
+
+request.FILES
+
+for image in request.FILES.getlist('file'):
+
+​	print(image)
+
+
+
+INSTAGRAM/assets/js에 슬랙에 있는 파일 세개 넣기
+
+======================================================
+
+
+
+templates - base.html
+
+```html
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>Fake Insta</title>
+    <script src="https://kit.fontawesome.com/557ed3dfa5.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    {% include '_navbar.html' %}
+    <div class="container">
+        {% block body %}
+        {% endblock %}
+    </div>
+    <script src="{% static 'js/jquery-3.3.1.slim.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+</body>
+
+</html>
+```
+
+
+
+postings - views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm, ImageForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+    })
+
+@require_GET
+def posting_list(request):
+    postings = Posting.object.all()
+    return render(request, 'postings/posting_list.html', {
+        'postings': postings,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    if request.method == 'POST':
+        # from IPython import embed;embed()
+        for image in request.FILES.getlist('file'):
+            request.FILES['file'] = image
+            image_form = ImageForm(file=request.FILES)  # Form 류는 request 로 시작하는 객체여야만 사용가능.
+            if image_form.is_valid():
+                image = image_form.save()
+
+        posting_form = PostingForm(request.POST)
+
+        if posting_form.is_valid():
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            return redirect(posting)
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.method == 'POST':
+        form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+    else:
+        form = PostingForm(instance=posting)
+    return render(request, 'postings/posting_form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('postings:posting_list')
+```
+
+
+
+views.py - create_posting 함수 수정
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm, ImageForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+    })
+
+@require_GET
+def posting_list(request):
+    postings = Posting.object.all()
+    return render(request, 'postings/posting_list.html', {
+        'postings': postings,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    if request.method == 'POST':
+        if posting_form.is_valid():
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            return redirect(posting)
+
+        # from IPython import embed;embed()
+        for image in request.FILES.getlist('file'):
+            request.FILES['file'] = image
+            image_form = ImageForm(file=request.FILES)  # Form 류는 request 로 시작하는 객체여야만 사용가능.
+            if image_form.is_valid():
+                image = image_form.save()
+
+        posting_form = PostingForm(request.POST)
+
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.method == 'POST':
+        form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+    else:
+        form = PostingForm(instance=posting)
+    return render(request, 'postings/posting_form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('postings:posting_list')
+```
+
+create_posting 함수 수정
+
+```python
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    images = request.FILES.getlist('file')
+    if request.method == 'POST':
+        if posting_form.is_valid() and len(images) <= 5:
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            for image in images:
+                request.FILES['file'] = image
+                image_form = ImageForm(file=request.FILES)  # Form 류는 request 로 시작하는 객체여야만 사용가능.
+                if image_form.is_valid():
+                    image = image_form.save()
+            return redirect(posting)
+
+        posting_form = PostingForm(request.POST)
+
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+```
+
+
+
+views.py
+
+```python
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    images = request.FILES.getlist('file')
+    if request.method == 'POST':
+        posting_form = PostingForm(request.POST)
+        if posting_form.is_valid() and len(images) <= 5:
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            for image in images:
+                request.FILES['file'] = image
+                image_form = ImageForm(file=request.FILES)  # Form 류는 request 로 시작하는 객체여야만 사용가능.
+                if image_form.is_valid():
+                    image = image_form.save(commit=False)
+                    image.posting = posting
+                    image.save()
+            return redirect(posting)
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+```
+
+`python manage.py makemigrations`
+
+`python manage.py runserver`
 
