--- a/memo/20191022보충.md
+++ b/memo/20191022보충.md
@@ -241,7 +241,8 @@ class CommentForm(forms.ModelForm):
 
     class Meta:
         model = Comment
-        fields = ('content')
+        fields = ('content',)  # []: 요소 갯수에 상관없이 iterable | (): 요소 갯수가 1이면 단일 값. 2 이상이면 Tuple(iterable)
+        # , 찍어야 튜플로 인식
 ```
 
 `python manage.py dbshell`
