algorithm_problem_solving_5개

--- a/Algorithm/lecture/AlgorithmStudy/L02.md
+++ b/Algorithm/lecture/AlgorithmStudy/L02.md
@@ -768,9 +768,45 @@ int main() {
 }
 ```
 
-array3
+array3 - 선생님이 도와주심
 
 ```c
+#include <stdio.h>
 
+int main(){
+  int n;
+  scanf("%d", &n);
+  
+  int arr[110][110] = {0,};
+  
+  int cnt = 1;
+  int j = 1;
+  
+  for(int i=1; i<=n; i++) {
+    int x = i;
+    int y = 1;
+    arr[y][x] = cnt;  // 시작위치 (1,i)
+    cnt++;
+    for(j=1; j<i; j++) {
+      x--;
+      y++;
+      arr[y][x] = cnt;
+      cnt++;
+    }
+  }
+  
+  for(int i=1; i<=n; i++) {
+    for(int j=1; j<=n; j++) {
+      if(arr[i][j]!=0){
+        printf("%d ", arr[i][j]);
+        // arr[i][j] = 0;
+      }
+    }
+    printf("\n");
+  }
+
+  
+  return 0;
+}
 ```
 
