--- a/Algorithm/lecture/AlgorithmStudy/L03.md
+++ b/Algorithm/lecture/AlgorithmStudy/L03.md
@@ -52,28 +52,168 @@ int main() {
 }
 ```
 
-offset
+offset - ☆
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int arr[7][7];
+  
+  for(int i=0; i<7; i++) {
+    for(int j=0; j<7; j++) {
+      arr[i][j] = 10;
+    }
+  }
+  
+  for(int i=1; i<=5; i++) {
+    for(int j=1; j<=5; j++) {
+      scanf("%d", &arr[i][j]);
+    }
+  }
+  
+  for(int i=0; i<7; i++) {
+    for(int j=0; j<7; j++) {
+      int cnt = 0;
+      if(arr[i][j] < arr[i-1][j]) cnt++;
+      if(arr[i][j] < arr[i+1][j]) cnt++;
+      if(arr[i][j] < arr[i][j-1]) cnt++;
+      if(arr[i][j] < arr[i][j+1]) cnt++;
+      if(cnt == 4) arr[i][j] = -1;
+      // if(arr[i][j] < arr[i-1][j]) {
+      //   if(arr[i][j] < arr[i][j-1]) {
+      //     if(arr[i][j] < arr[i][j+1]) {
+      //       if(arr[i][j] < arr[i+1][j]) {
+      //         arr[i][j] = -1;
+      //       }
+      //     }
+      //   }
+      // }
+    }
+  }
+  
+  for(int i=1; i<=5; i++) {
+    for(int j=1; j<=5; j++) {
+      if(arr[i][j] == -1) {
+        printf("* ");
+      }
+      else {
+        printf("%d ", arr[i][j]);
+      }
+    }
+    printf("\n");
+  }
+
+  return 0;
+}
 ```
 
 검증수
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int arr[5];
+  int sum=0;
+  
+  for(int i=0; i<5; i++) {
+    scanf("%d", &arr[i]);
+  }
+  
+  for(int i=0; i<5; i++) {
+    sum += arr[i]*arr[i];
+  }
+  
+  printf("%d", sum%10);
+
+// printf("%d ",arr[0]);
+// printf("%d ",arr[1]);
+// printf("%d ",arr[2]);
+// printf("%d ",arr[3]);
+// printf("%d ",arr[4]);
+
+// for (int i = 0; i < 5; i++)    // 배열의 요소 개수만큼 반복
+//   {
+//       printf("%d\n", arr[i]);    // 배열의 인덱스에 반복문의 변수 i를 지정
+//   }
+
+  return 0;
+}
 ```
 
-상자 꾸미기
+상자 꾸미기 - ☆
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int n;
+  scanf("%d", &n);
+  
+  int arr[1010]={0,};
+  
+  int color;
+  
+  for(int i=1; i<=n; i++) {
+    scanf("%d", &color);
+    arr[color]++;
+    color = 0;
+  }
+  
+  int sum = 0;
+  for(int i=1; i<=n; i++) {
+    if (arr[i] >= 2) {
+      sum += 2;
+    }
+    else {
+      sum += arr[i];
+    }
+  }
+  
+  if (sum >= 6) {
+    printf("YES");
+  }
+  else {
+    printf("NO");
+  }
+  
+}
 ```
 
 GCD LCM
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int M, N;
+  int temp;
+  scanf("%d %d", &M, &N);
+  int GCD = 0;
+  
+  if(M>N) {
+    M = M;
+    N = N;
+  }
+  else {
+    temp = M;
+    M = N;
+    N = temp;
+  }
+  
+  // int arr[N];
+  
+  for(int i=1;i<=N;i++) {
+    if((M%i==0)&&(N%i==0)) {
+      GCD = i;
+    }
+  }
+  
+  printf("%d\n", GCD);
+  printf("%d", M*N/GCD);
+  return 0;
+}
 ```
 
 eightnine
