--- a/Algorithm/lecture/AlgorithmStudy/L03.md
+++ b/Algorithm/lecture/AlgorithmStudy/L03.md
@@ -219,25 +219,195 @@ int main() {
 eightnine
 
 ```c
+# include <stdio.h>
 
+int main() {
+  int n, m;
+  scanf("%d %d", &n, &m);
+  int arr[n][m];
+  
+  for(int i=0; i<n; i++) {
+    for(int j=0; j<m; j++) {
+      scanf("%d", &arr[i][j]);
+    }
+  }
+  
+  for(int i=0; i<n; i++) {
+    for(int j=0; j<m; j++) {
+      printf("%d ", arr[i][m-j-1]);
+    }
+    printf("\n");
+  }
+  
+  return 0;
+}
 ```
 
 행렬 뒤집기
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int n;
+  int arr[10][10] = {0};
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<10; i++) {
+    for(int j=0; j<10; j++) {
+      for(int k=0; k<n; k++) {
+        arr[k][j] = 1;
+        arr[i][k] = 1;
+      }
+    }
+  }
+  
+  for(int i=0; i<n; i++) {
+    for(int j=0; j<n; j++) {
+      arr[i][j] = 0;
+    }
+  }
+  
+  for(int i=0; i<n; i++) {
+    arr[i][i] = 1;
+  }
+  
+  for(int i=0; i<10; i++) {
+    for(int j=0; j<10; j++) {
+      printf("%d ", arr[i][j]);
+    }
+    printf("\n");
+  }
+  
+  return 0;
+}
 ```
 
 행렬 뒤집기2
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int n;
+  int arr[10][10];
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<10; i++) {
+    for(int j=0; j<10; j++) {
+      scanf("%d", &arr[i][j]);
+    }
+  }
+
+// 이렇게하면안됨
+  // for(int i=0; i<10; i++) {
+  //   for(int j=0; j<10; j++) {
+  //     for(int k=0; k<n; k++) {
+  //       if(arr[k][j]==0) {
+  //         arr[k][j] = 1;
+  //       }
+  //       else {
+  //         arr[k][j] = 0;
+  //       }
+  //       if(arr[i][k]==0) {
+  //         arr[i][k] = 1;
+  //       }
+  //       else {
+  //         arr[i][k] = 0;
+  //       }
+  //     }
+  //   }
+  // }
+  
+  // for(int i=0; i<n; i++) {
+  //   for(int j=0; j<n; j++) {
+  //     if(arr[i][j]==1) {
+  //       arr[i][j] = 0;
+  //     }
+  //     else {
+  //       arr[i][j] = 1;
+  //     }
+  //   }
+  // }
+  
+  
+  for(int i=0; i<10; i++) {
+    for(int k=0; k<n; k++) {
+      if(arr[i][k] == 1) {
+        arr[i][k] = 0;
+      }
+      else {
+        arr[i][k] = 1;
+      }
+    }
+  }
+  
+  for(int j=0; j<10; j++) {
+    for(int k=0; k<n; k++) {
+      if(arr[k][j] == 1) {
+        arr[k][j] = 0;
+      }
+      else {
+        arr[k][j] = 1;
+      }
+    }
+  }
+  
+  for(int i=0; i<n; i++) {
+    if(arr[i][i] == 1) {
+      arr[i][i] = 0;
+    }
+    else {
+      arr[i][i] = 1;
+    }
+  }
+  
+  for(int i=0; i<10; i++) {
+    for(int j=0; j<10; j++) {
+      printf("%d ", arr[i][j]);
+    }
+    printf("\n");
+  }
+  
+  return 0;
+}
 ```
 
 maxofarr
 
 ```c
+#include <stdio.h>
 
+int main() {
+  
+  int board[9][9];
+  int max_num = 0;
+  int m_r = 0;
+  int m_c = 0;
+  
+  for(int i=0; i<9; i++) {
+    for(int j=0; j<9; j++) {
+      scanf("%d", &board[i][j]);
+    }
+  }
+  
+  for(int i=0; i<9; i++) {
+    for(int j=0; j<9; j++) {
+      if (max_num < board[i][j]) {
+        max_num = board[i][j];
+        m_r = i+1;
+        m_c = j+1;
+      }
+    }
+  }
+  
+  printf("%d\n", max_num);
+  printf("%d %d", m_r, m_c);
+
+  return 0;
+}
 ```
 
 rook
