--- a/Algorithm/lecture/AlgorithmStudy/L03.md
+++ b/Algorithm/lecture/AlgorithmStudy/L03.md
@@ -413,7 +413,84 @@ int main() {
 rook
 
 ```c
+#include <stdio.h>
 
+int main() {
+  
+  int arr[8][8];
+  int x;
+  int y;
+  int flag = 1;
+  
+  for(int i=0; i<8; i++) {
+    for(int j=0; j<8; j++) {
+      scanf("%d", &arr[i][j]);
+    }
+  }
+  
+  for(int i=0; i<8; i++) {
+    for(int j=0; j<8; j++) {
+      if(arr[i][j]==1) {
+        x = i;
+        y = j;
+      }
+    }
+  }
+  if (flag == 1) {
+    for(int i=0; x+i<8; i++) {
+      if(arr[x+i][y]==3) {
+        break;
+      }
+      else if(arr[x+i][y]==2) {
+        printf("1");
+        flag = 0;
+        break;
+      }
+    }
+  }
+  if (flag == 1) {
+    for(int i=0; x-i>=0; i++) {
+      if(arr[x-i][y]==3) {
+        break;
+      }
+      else if(arr[x-i][y]==2) {
+        printf("1");
+        flag = 0;
+        break;
+      }
+    }
+  }
+  if (flag == 1) {
+    for(int i=0; y+i<8; i++) {
+      if(arr[x][y+i]==3) {
+        break;
+      }
+      else if(arr[x][y+i]==2) {
+        printf("1");
+        flag = 0;
+        break;
+      }
+    }
+  }
+  if (flag == 1) {
+    for(int i=0; y-i>=0; i++) {
+      if(arr[x][y-i]==3) {
+        break;
+      }
+      else if(arr[x][y-i]==2) {
+        printf("1");
+        flag = 0;
+        break;
+      }
+    }
+  }
+  
+  if (flag == 1) {
+    printf("0");
+  }
+  
+  return 0;
+}
 ```
 
 attackrange
