--- a/memo/20191031.md
+++ b/memo/20191031.md
@@ -113,3 +113,99 @@ gitignore.io에서 Python, Django 생성하고 venv/ 밑에 복붙 후 저장
 
 `django-admin startproject pjt07 .`
 
+`pip freeze > requirements.txt`
+
+`git add .`
+
+`git commit -m 'Init Project'`
+
+.gitignore에
+
+.vscode/ 도 추가했어야 했는데
+
+`git rm -r .vscode`  <= git에서도 관리가 중단되고 .vscode도 삭제됨
+
+`git rm -r --cached .vscode`  <= 폴더는 안지우고 git 관리만 중단
+
+`git add .`
+
+`git commit -m 'rm .vscode/`
+
+`git push`
+
+`git remote add origin ... `
+
+`git push -u origin master`
+
+
+
+새로고침하고(상대방이 올린거 올라와있음)
+
+주소 복사해서
+
+
+
+홈에서 Git Bash Here
+
+`git clone 주소`
+
+폴더 들어와서 Open with code
+
+
+
+`py -m venv venv`
+
+`source venv/Scripts/activate && pip install -r requirements.txt`
+
+
+
+플젝만든사람이
+
+settings.py에서
+
+LANGUAGE_CODE = 'ko-kr'
+
+TIME_ZONE = 'Asia/Seoul'
+
+저장하고
+
+`git add .`
+
+`git commit -m 'settings.py LANG, TZ 바꿈'`
+
+`git push`
+
+
+
+pjt07 나머지는 `git pull`
+
+
+
+(master|MERGING)
+
+Ctrl 누르고 열면
+
+초록색이 내 코드고
+
+파란색이 남이 쓴 코드
+
+현재 변경 사항 누르면 초록색 코드가 남고
+
+git status -> 수정 확인
+
+`git add .`
+
+`git commit -m 'merge conflict - AUTH_USER_MODEL'`
+
+`git pull`
+
+`git push`
+
+
+
+`git pull`
+
+`django-admin startapp accounts`
+
+`git add accounts/` <- 최대한 충돌안나게
+
