--- a/Algorithm/lecture/AlgorithmStudy/L03.md
+++ b/Algorithm/lecture/AlgorithmStudy/L03.md
@@ -496,19 +496,159 @@ int main() {
 attackrange
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int n;
+  scanf("%d", &n);
+  
+  int x, y, r;
+  scanf("%d %d %d", &x, &y, &r);
+  
+  int arr[105][105]={0};
+  
+  int dx=0;
+  int dy=0;
+  int dist=0;
+  
+  for(int i=1; i<=n; i++) {
+    for(int j=1; j<=n; j++) {
+      dx = x - i;
+      dy = y - j;
+      if(dx<0) dx = -dx;
+      if(dy<0) dy = -dy;
+      dist = dx + dy;
+      arr[i][j] = dist;
+    }
+  }
+  
+  for(int i=1; i<=n; i++) {
+    for(int j=1; j<=n; j++) {
+      if(arr[i][j]>r) {
+        printf("%d ", 0);
+      }
+      else if(arr[i][j]==0) {
+        printf("x ");
+      }
+      else {
+        printf("%d ", arr[i][j]);
+      }
+    }
+    printf("\n");
+  }
+  
+  return 0;
+}
 ```
 
 colorpaper
 
 ```c
+#include <stdio.h>
 
+int main() {
+
+  int arr[105][105] = {0};
+  
+  int n;
+  scanf("%d", &n);
+  
+  int x=0;
+  int y=0;
+  int w=0;
+  int h=0;
+  
+  for(int i=1; i<n+1; i++) {
+    scanf("%d %d %d %d", &x, &y, &w, &h);
+    for(int a=x; a<x+w; a++) {
+      for(int b=y; b<y+h; b++) {
+        arr[a][b] = i;
+      }
+    }
+  }
+  
+  for(int k=1; k<=n; k++) {
+    int cnt = 0;
+    for(int i=0; i<105; i++) {
+      for(int j=0; j<105; j++) {
+        if(arr[i][j] == k) {
+          cnt += 1;
+        }
+      }
+    }
+    printf("%d\n", cnt);
+  }
+
+  return 0;
+}
 ```
 
 mine
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int arr[105][105] = {0};
+  
+  int N, M;
+  scanf("%d %d", &N, &M);
+  
+  int X, Y;
+  scanf("%d %d", &X, &Y);
+  
+  int cnt=0;
+  
+  for(int i=1; i<=N; i++) {
+    for(int j=1; j<=M; j++) {
+      scanf("%d", &arr[i][j]);
+    }
+  }
+  
+  if(arr[X][Y] == 1) {
+    printf("game over");
+  }
+  else {
+    // if(arr[X-1][Y-1]==1) {
+    //   cnt += 1;
+    // }
+    // if(arr[X-1][Y]==1) {
+    //   cnt += 1;
+    // }
+    // if(arr[X-1][Y+1]==1) {
+    //   cnt += 1;
+    // }
+    // if(arr[X][Y-1]==1) {
+    //   cnt += 1;
+    // }
+    // if(arr[X][Y+1]==1) {
+    //   cnt += 1;
+    // }
+    // if(arr[X+1][Y-1]==1) {
+    //   cnt += 1;
+    // }
+    // if(arr[X+1][Y]==1) {
+    //   cnt += 1;
+    // }
+    // if(arr[X+1][Y+1]==1) {
+    //   cnt += 1;
+    // }
+    for(int i=-1; i<=1; i++) {
+      for(int j=-1; j<=1; j++) {
+        if(i==0 && j==0) {
+          cnt += 0;
+        }
+        if(arr[X+i][Y+j]==1) {
+          cnt += 1;
+        }
+      }
+    }
+    
+    printf("%d", cnt);
+  }
+
+  return 0;
+}
 ```
 
 class president
