--- a/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
+++ b/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
@@ -898,8 +898,320 @@ n % 5 === 0 || console.log('5로 나누어 떨어지지 않을 때만 실행'); 
 // 조건 ? 조건이 참이면 실행되는 표현식 : 조건이 거짓이면 실행되는 표현식
 // 중괄호 {} 를 사용할 수 없는 문법이기 때문에 하나의 표현식만 가능
 
+let n = 5;
+
+console.log(n % 5 === 0 ? '5의 배수 입니다.' : '5의 배수가 아닙니다.');
+
 // 표현식의 결과를 변수에 할당할 수 있음
 
+const message = n % 5 === 0 ? '5의 배수 입니다.' : '5의 배수가 아닙니다.';
+console.log(message);
 
+```
+
+
+
+switch 를 이용한 조건문
+
+```javascript
+// switch 뒤 괄호 안에 있는 값이 무엇인지 중괄호 안에 있는 코드들을 비교해서 실행
+// 이중에 default: 뒤에 있는 문장은 항상 참이어서 실행되는 블럭
+// 문장이 한 줄이라서 중괄호는 생략
+
+let n = 5;
+
+switch (n) {
+    default:
+        console.log(n);
+}
+
+// 다음은 n 이 5 로 나누었을 때 나머지가 0 인 경우에 실행되는 블럭을 추가한 것
+// case '비교할 값': 을 이용해서 맞으면 실행됨
+// case 0: 인 경우와 default: 인 경우 두 블럭 모두 순서대로 실행이 됨
+
+switch (n % 5) {
+    case 0: {
+        console.log('5의 배수입니다.');
+    }
+    default:
+        console.log(n);
+}
+
+// 만약에 해당 블럭이 실행된 후 다음 블럭을 거치지 않고 switch 문을 나가고 싶다면,
+// case 문 안에서 break; 를 실행함
+
+switch (n % 5) {
+    case 0: {
+        console.log('5의 배수입니다.');
+        break;
+    }
+    default:
+        console.log(n);
+}
+
+// break 와 case 문의 순서를 잘 조정하여, 원하는 코드를 만들어 낼 수 있도록 제대로 이해해야 함
+
+n = 6;
+
+switch (n % 5) {
+    case 0: {
+        console.log('5의 배수입니다.');
+        break;
+    }
+    case 1:
+    case 2:
+    case 3:
+    case 4:
+        console.log('5의 배수가 아닙니다.');
+        
+    default:
+        console.log(n);
+}
+```
+
+
+
+#### 반복문 Iteration Statements
+
+```javascript
+// 반복문이 없다면?
+console.log('안녕하세요');
+console.log('안녕하세요');
+console.log('안녕하세요');
+console.log('안녕하세요');
+console.log('안녕하세요');
+
+// for 문을 사용한다면?
+// 보통 어떤 유한한 횟수만큼 반복할 때는 for 문을 사용
+
+for (let i = 0; i < 5; i++) {
+    console.log('안녕하세요');
+}
+```
+
+```
+for (초기화; 반복 조건; 반복이 된 후 실행되는 코드) {
+	반복이 되는 코드 블럭
+}
+```
+
+```javascript
+for (a; b; c) {
+    d
+}
+e
+
+a -> d -> c -> b -> d -> c -> b -> e
+```
+
+![image-20191107220619293](./images/image-20191107220619293.png)
+
+
+
+```javascript
+for(;;) {
+    console.log('안녕하세요');
+    if (Math.random() * 100 > 90) {
+        break;
+    }
+}
+```
+
+
+
+```javascript
+while(조건) {
+    조건이 거짓이 될 때까지 반복 실행
+}
+```
+
+
+
+```javascript
+// while 무한 루프
+while (true) {
+    console.log('안녕하세요');
+    if (Math.random() * 100 > 90) {
+        break;
+    }
+}
+```
+
+
+
+```javascript
+do {
+    조건이 거짓이 될 때까지 반복 실행
+} while(조건);
+```
+
+
+
+```javascript
+// do while 반복문
+do {
+    console.log('안녕하세요');
+} while (Math.random() * 100 <= 90);
+```
+
+
+
+### for of
+
+iterable
+
+```javascript
+for (const i of [1, 2, 3]) {
+    console.log(i);
+}
+```
+
+
+
+### for in
+
+모든 프로퍼티
+
+```javascript
+Object.prototype.test = function() {};
+
+for (const i in {a: 1, b: 2, c: 3}) {
+    console.log(i);
+}
+```
+
+
+
+### 함수
+
+function
+
+function hello() {}
+
+함수를 만들 때 사용하는 키워드
+
+```javascript
+// function
+// 이름이 hello1 인 함수를 선언
+
+function hello1() {
+    console.log('hello1');
+}
+
+console.log(hello1, typeof hello1);
+// [Function: hello1] 'function'
+
+
+// 함수의 매개변수
+// 함수를 호출할 때 값을 지정
+
+function hello2(name) {
+    console.log('hello2', name);
+}
+
+
+// 함수의 리턴
+// 함수를 실행하면 얻어지는 값
+
+function hello3(name) {
+    return `hello3 ${name}`;
+}
+
+console.log(hello3('Mark'));
+```
+
+
+
+const hello = function() {}
+
+함수를 만들 때 사용하는 키워드
+
+```javascript
+// function
+// 이름이 hello1 인 함수를 선언
+
+const hello1 = function() {
+    console.log('hello1');
+};
+
+console.log(hello1, typeof hello1);
+
+
+// 함수의 매개변수
+// 함수를 호출할 때 값을 지정
+
+const hello2 = function(name) {
+    console.log('hello2', name);
+}
+
+// 함수의 리턴
+// 함수를 실행하면 얻어지는 값
+
+const hello3 = function(name) {
+    return `hello3 ${name}`;
+}
+```
+
+선언적 function 과 익명 함수를 만들어 변수에 할당
+
+차이점은?
+
+```javascript
+function hello1() {
+    console.log('hello1');
+}
+
+hello1();  // hello1
+```
+
+```javascript
+hello1();  // hello1
+
+function hello1() {
+    console.log('hello1');
+}
+```
+
+
+
+```javascript
+console.log(hello2);  // undefined
+
+hello2();  // hello2 is not a function
+
+var hello2 = function() {
+    console.log(hello2);
+}
+```
+
+```javascript
+var hello2;
+console.log(hello2);  // undefined
+
+hello2();  // hello2 is not a function
+
+hello2 = function() {
+    console.log(hello2);
+}
+```
+
+
+
+```javascript
+hello3();  // hello3 is not defined
+
+const hello3 = function() {
+    console.log('hello3');
+};
+```
+
+
+
+const hello = new Function();
+
+생성자 함수로 함수를 만드는 방법
+
+```javascript
+// new Function()
 ```
 
